--- a/GoDeliverFrontEnd/src/app/orders/orders.component.css
+++ b/GoDeliverFrontEnd/src/app/orders/orders.component.css
@@ -1,3 +1,20 @@
+.component-body{
+  height: 100%;
+  margin: 2%;
+}
+
+
+.main{
+  padding: 1%;
+  border-radius: 5px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.col-md-4{
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+
 
 dl dt {
     margin-left: 0;
@@ -20,10 +37,7 @@ dl dt {
     display: block;
     }
 .successful{
-    background-image: linear-gradient(-90deg, rgb(161, 161, 163),white);
-    /* background:darkturquoise; */
-    color:black ;
-    
+
 }
 /* .orders{
     border-color: black;
