--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -1,33 +1,16 @@
 .component-body{
   height:100%;
+  /* background: url(../../assets/wallp.jpg); */
   background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .container-fluid {
   text-align: center;
   margin: 0 auto;
   width: 100%;
-  position: absolute;
-  z-index: 1;
-  top: 20%;
-}
-
-.landing-background{
-  width:100%;
-  position: relative;
-  z-index: 0;
-  opacity: 0.7;
-}
-
-@media only screen and (max-width: 320px) {
-  .container-fluid {
-    text-align: center;
-    margin: 0 auto;
-    height: 75vh;
-    width: 100%;
-    position: absolute;
-    z-index: 1;
-  }
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 
@@ -45,6 +28,7 @@
 
 mat-card {
   text-align: center;
+  top: 3%;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
