--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -1,8 +1,5 @@
 <!-- User registration HTML page-->
 <div class="component-body">
-  <video class="landing-background" autoplay muted loop>
-        <source src="../../assets/wallpaper.mp4" type="video/mp4">
-  </video>
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-md-8">
@@ -17,7 +14,7 @@
                 <br>
                 <mat-form-field class="example-full-width">
                   <input matInput placeholder="Email" formControlName="userEmail" name="userEmail" required>
-                  <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                  <mat-error *ngIf="userEmail.invalid">{{getErrorMessage()}}</mat-error>
                 </mat-form-field>
                 <br>
                 <mat-form-field class="password" class="example-full-width">
