--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -1,87 +1,33 @@
-<form #myForm="ngForm" (ngSubmit)="onSubmit()">
-  <div class="container-fluid text-center">
-    <div class="row">
-      <div class="col-sm-12">
-        <mat-form-field class="example-full-width">
-          <input matInput (click)="onDate(dateOfDelivery)" [matDatepicker]="picker" [(ngModel)]="dateOfDelivery" name="dateOfDelivery"
-            required placeholder="Choose a date" style="margin-right:10px">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker touchUi #picker></mat-datepicker>
-        </mat-form-field>
-        <button (click)="onDate()" style="border-radius:8px;background-color:deepskyblue">Get Data</button>
-      </div>
-      <div class="col-sm-12">
-        <mat-radio-group>
-          <mat-radio-button value="1" (click)="timePrint(0)">Slot-1</mat-radio-button>&nbsp;
-          <mat-radio-button value="2" (click)="timePrint(1)">Slot-2</mat-radio-button>&nbsp;
-          <mat-radio-button value="3" (click)="timePrint(2)">Slot-3</mat-radio-button>
-        </mat-radio-group>
-        <div class="col-sm-12">
-          <button type="submit" (click)="slotPrint(0)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle 1
-          </button>&nbsp;
-          <button type="submit" (click)="slotPrint(1)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle 2</button>&nbsp;
-          <button type="submit" (click)="slotPrint(2)" [disabled]="!myForm.form.valid" class="btn btn-primary">Vehicle 3</button>
-        </div>
-      </div>
-    </div>
-        <div class="row">
-          <div class="col-sm-4">
-              <div *ngIf=pieChartData1>
-            <canvas baseChart [data]="pieChartData1" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)"
-              (chartClick)="chartClicked($event)"></canvas>
-          </div>
-        </div>
-        
-          <div class="col-sm-4">
-              <div *ngIf=pieChartData2>
-            <canvas baseChart [data]="pieChartData2" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)"
-              (chartClick)="chartClicked($event)"></canvas>
-          </div>
-        </div>
-        
-          <div class="col-sm-4">
-              <div *ngIf=pieChartData2>
-            <canvas baseChart [data]="pieChartData3" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)"
-              (chartClick)="chartClicked($event)"></canvas>
-          </div>
-        </div>
-        <div class="col-sm-4" style="background-color:lavender;">
-          <div *ngIf=doughnutChartData>
-            <canvas baseChart [datasets]="barChartData1" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
-              [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
-          </div>
-        </div>
-        <div class="col-sm-4" style="background-color:lavender;">
-            <div *ngIf=doughnutChartData>
-              <canvas baseChart [datasets]="barChartData2" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
-                [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
-            </div>
-          </div>
-          <div class="col-sm-4" style="background-color:lavender;">
-              <div *ngIf=doughnutChartData>
-                <canvas baseChart [datasets]="barChartData3" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend"
-                  [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
-              </div>
-            </div>
-            <div class="col-sm-6" style="background-color:lavender;">
-                <div *ngIf=doughnutChartData>
-                  <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)"></canvas>
-                </div>
-              </div>
-    </div>
+<div class="component-body">
+  <div class="container text-center">
+    <form>
+      <mat-form-field class="example-full-width">
+        <input matInput (click)="onDate(dateOfDelivery)" [matDatepicker]="picker" [(ngModel)]="dateOfDelivery" name="dateOfDelivery" required placeholder="Choose a date" style="margin-right:10px">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker touchUi #picker></mat-datepicker>
+      </mat-form-field>
+      <!-- <button class="btn btn-danger rounded" (click)="onDate()">Get Data</button> -->
+    </form>
   </div>
-</form>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-6" style="background-color:lavender;">
-      <div *ngIf=origin>
-        <agm-map [latitude]="lat" [longitude]="lng">
-          <agm-direction [origin]="origin" [waypoints]="stops" [destination]="destination">
-          </agm-direction>
-        </agm-map>
+  <div class="conatiner-fluid">
+    <div>
+      <h5>Slot Details</h5>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-3" *ngFor="let slot of slots">
+        <div *ngIf="slot">
+          <canvas baseChart [data]="slot" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+            </canvas>
+        </div>
       </div>
     </div>
-   
+    <div class="row justify-content-center">
+      <div class="col-md-3" *ngFor="let vehiclesData of vehicleData">
+        <div *ngIf="vehiclesData">
+          <canvas baseChart [datasets]="vehiclesData" [labels]="barChartLabels" [options]="barChartOptions" [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)">
+            </canvas>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
