--- a/GoDeliverFrontEnd/src/app/admin/admin.component.css
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.css
@@ -7,16 +7,16 @@ agm-map {
     height: 100%;
 }
 
-.card{
-   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-}
-
 .row{
   margin: 2px;
 }
 
 .col-md-3{
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  margin: 2px;
+  margin: 2%;
   border-radius: 5px;
+}
+
+canvas{
+  width: 100%;
 }
