--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,7 +1,7 @@
 <div class="component-body">
   <div *ngIf="carts.length!=0;else test">
     <div class=" container">
-      <div class="table-responsive">
+      <div class="table-responsive{-sm|-md|-lg|-xl}">
         <table class="table table-striped table-hover ">
           <thead>
             <tr>
