--- a/GoDeliverFrontEnd/src/app/delivery-card/delivery-card.component.html
+++ b/GoDeliverFrontEnd/src/app/delivery-card/delivery-card.component.html
@@ -15,7 +15,7 @@
   <div *ngIf="isRadioSelect()">
     <div>
       <mat-form-field style="margin-left: 35px;" >
-          <input matInput [matDatepicker]="picker"[(ngModel)]="date"  placeholder="Month and Year" required>
+          <input matInput [matDatepicker]="picker"[(ngModel)]="date"  placeholder="Delivery date" required>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
