Frontend: admin component modified

--- a/GoDeliverFrontEnd/src/app/admin/admin.component.css
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.css
@@ -13,10 +13,23 @@ agm-map {
 
 .col-md-3{
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  margin: 2%;
+  margin: 1%;
   border-radius: 5px;
 }
 
 canvas{
   width: 100%;
+}
+
+.timings{
+  box-shadow: none;
+}
+
+.buttons{
+  margin: 1%;
+  box-shadow: none;
+}
+
+.btn:focus {
+  outline: none;
 }
