--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -10,9 +10,27 @@
     </form>
   </div>
   <div class="conatiner-fluid">
-    <div>
-      <h5>Slot Details</h5>
+    <div style="margin-left:10%;font-size:8vh;">
+      <p class="text-xl-left font-weight-bold">Slot Details</p>
     </div>
+    <div class="row justify-content-center">
+      <div class="col-md-3 justify-content-center timings">
+        <div class="container-fluid">
+          <p class="text-xl-center font-weight-bold">09:00-12:00</p>
+        </div>
+      </div>
+      <div class="col-md-3 justify-content-center timings">
+        <div class="container-fluid">
+          <p class="text-xl-center font-weight-bold">13:00-16:00</p>
+        </div>
+      </div>
+      <div class="col-md-3 justify-content-center timings">
+        <div class="container-fluid">
+          <p class="text-xl-center font-weight-bold">17:00-20:00</p>
+        </div>
+      </div>
+    </div>
+
     <div class="row justify-content-center">
       <div class="col-md-3" *ngFor="let slot of slots">
         <div *ngIf="slot">
@@ -29,5 +47,67 @@
         </div>
       </div>
     </div>
+    <div class="row justify-content-center">
+      <div class="col-md-3 justify-content-center buttons">
+        <div class="container-fluid">
+          <div class="btn-group">
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(0,0)">Vehicle 1</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(0,1)">Vehicle 2</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(0,2)">Vehicle 3</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 justify-content-center  buttons">
+        <div class="container-fluid">
+          <div class="btn-group">
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(1,0)">Vehicle 1</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(1,1)">Vehicle 2</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(1,2)">Vehicle 3</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 justify-content-center buttons">
+        <div class="container-fluid">
+          <div class="btn-group">
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(2,0)">Vehicle 1</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(2,1)">Vehicle 2</button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal" (click)="onVehicle(2,2)">Vehicle 3</button>
+          </div>
+        </div>
+      </div>
+      <!-- Modal for vehicle analytics -->
+      <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+              <h4 class="modal-title">Vehicle Analytics</h4>
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-4"></div>
+                  <div class="col-md-8"></div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+
   </div>
 </div>
