--- a/GoDeliverFrontEnd/src/app/payment/payment.component.html
+++ b/GoDeliverFrontEnd/src/app/payment/payment.component.html
@@ -1,3 +1,8 @@
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="default"
+  color="#fff"
+  type="ball-circus"></ngx-spinner>
 <div class="container">
   <div class="row mb-4 ml-1" style="align-self:center">
 
@@ -40,11 +45,15 @@
           <!-- </label> -->
         </div>
         <!-- <button type="submit" [disabled]="!myForm.form.valid" class="btn btn-primary">Submit</button> -->
-        <button type="submit" [disabled]="!myForm.form.valid" appNoDblClick (click)="chargeCreditCard()" style="border-radius:8px;height:40px">Submit</button>
+        <button type="submit" [disabled]="!myForm.form.valid" appNoDblClick (click)="chargeCreditCard()" (click)="openSpinner()" style="border-radius:8px;height:40px">Submit</button>
         <button (click)="refundCreditCard()" style="border-radius:8px;margin-left:20px;height:40px">Refund</button><br><br>
+        <div *ngIf="(!msg)">
+          <p style="color:red">{{msg1}}</p>
+        </div>
+        <div *ngIf="(msg)">
         <p style="color:green">{{msg}}</p>
+      </div>
 <p> {{sum}}</p>
-
       </form>
     </mat-card>
   </div>
