billing-timeslot-updated

--- a/GoDeliverFrontEnd/src/app/billing/billing.component.html
+++ b/GoDeliverFrontEnd/src/app/billing/billing.component.html
@@ -54,7 +54,7 @@
     </mat-accordion>
   </div>
   <div class="col-sm-6">
-    <mat-card>
+    <mat-card class="billing-card">
       <mat-card-title>
         <b>Order Details</b>
       </mat-card-title>
@@ -78,14 +78,6 @@
               </td>
             </tr>
             <hr>
-            <tr>
-              <td style="width: 400px">
-                <h5>Deliver Charges</h5>
-              </td>
-              <td>
-                <h5>Free</h5>
-              </td>
-            </tr>
           </thead>
         </div>
       </mat-card-content>
