--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -77,9 +77,8 @@
       </div>
       <!-- Modal for vehicle analytics -->
       <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
           <div class="modal-content">
-
             <!-- Modal Header -->
             <div class="modal-header">
               <h4 class="modal-title">Vehicle Analytics</h4>
@@ -88,12 +87,21 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-              <div class="container-fluid">
                 <div class="row">
-                  <div class="col-md-4"></div>
-                  <div class="col-md-8"></div>
+                  <div class="col-md-4">
+                    <div *ngIf="vehicleCapacity">
+                      <canvas baseChart [data]="vehicleCapacity" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+                    </div>
+                  </div>
+                  <div class="col-md-8">
+                    <div *ngIf=origin>
+                      <agm-map [latitude]="lat" [longitude]="lng">
+                        <agm-direction [origin]="origin" [waypoints]="stops" [destination]="destination">
+                        </agm-direction>
+                      </agm-map>
+                    </div>
+                  </div>
                 </div>
-              </div>
             </div>
 
             <!-- Modal footer -->
@@ -106,8 +114,5 @@
       </div>
 
     </div>
-
-
-
   </div>
 </div>
