--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -84,11 +84,11 @@
               <h4 class="modal-title">Vehicle Analytics</h4>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
-
             <!-- Modal body -->
             <div class="modal-body">
                 <div class="row">
-                  <div class="col-md-4">
+                  <div class="col-md-4 p-2">
+                    <p class="text-xl-left">Vehicle {{vehicleSelected}}</p>
                     <div *ngIf="vehicleCapacity">
                       <canvas baseChart [data]="vehicleCapacity" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
                     </div>
