--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,7 +1,7 @@
 <div class="component-body">
   <div *ngIf="carts.length!=0;else test">
     <div class=" container">
-      <div class="table-responsive{-sm|-md|-lg|-xl}">
+      <div class="table-responsive">
         <table class="table table-striped table-hover ">
           <thead>
             <tr>
@@ -15,13 +15,13 @@
 
           <tbody>
             <tr *ngFor="let item of carts; let i = index">
-              <td>
+              <td data-label="Product Name">
                 <h4>{{item.title}}</h4>
               </td>
-              <td>
+              <td data-label="Product Price">
                 <h4>Rs {{item.cost}}</h4>
               </td>
-              <td><img src={{item.poster}} width="100" height="100" /></td>
+              <td data-label="Product Image"><img src={{item.poster}} width="100" height="100" /></td>
               <td><span class="btn btn-default btn-md btn-qty" (click)="decrementQuantity($event, item)">
               <i class="fa fa-minus-square-o" aria-hidden="true"></i>
                 </span>
@@ -30,7 +30,7 @@
               <i class="fa fa-plus-square-o" aria-hidden="true"></i>
                 </span>
               </td>
-              <td>{{item.quantity}}</td>
+              <td data-label="Qty.">{{item.quantity}}</td>
               <td><button (click)="deleteItem($event,item)" class="btn btn-xs btn-default"><i class="fa fa-close"></i></button></td>
             </tr>
 
