changes in timeslots

--- a/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
+++ b/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
@@ -1,5 +1,5 @@
 <div class="component-body">
-<h1 style="text-align: center; margin-top: 20px">Select time slots</h1>
+<h1 style="text-align: center; margin-top: 20px">Select time slot</h1>
 <div class="container">
     <div class="row">
    <div class="col-sm-8">
@@ -88,7 +88,7 @@
        </mat-card>
    </div>
    </div>
-   <button (click)="paymentRoute()" class="btn btn-primary btn-block" style="margin-top:20px">
+   <button class="btn btn-primary btn-block" style="margin-top:20px">
      Proceed To Payment
    </button>
    <br>
