changes in billing

--- a/GoDeliverFrontEnd/src/app/billing/billing.component.css
+++ b/GoDeliverFrontEnd/src/app/billing/billing.component.css
@@ -7,3 +7,10 @@
   width: 100%;
   padding-left: 30px;
 }
+.title{
+  color: white;
+}
+mat-card-title{
+  border-radius: 6px;
+  border-width: 12px;
+}
