--- a/GoDeliverFrontEnd/src/app/billing/billing.component.html
+++ b/GoDeliverFrontEnd/src/app/billing/billing.component.html
@@ -2,6 +2,8 @@
 <div class="container-fluid">
 <div class="row">
   <div class="col-sm-6">
+    <mat-card style="margin-bottom: 10px;">
+    <mat-card-title class="title" style="padding-left: 15px; background-color:rgb(216, 76, 76); ">Delivery Address</mat-card-title>
     <div *ngIf="addressList">
       <div style="margin-left:20px;margin-right:10px" *ngFor="let address of addressList">
         <app-delivery-card [address]="address"></app-delivery-card>
@@ -10,8 +12,8 @@
     <br>
     <mat-accordion style="padding-left:20px;padding-right: 30px">
       <mat-expansion-panel>
-        <mat-expansion-panel-header style="background-color:deepskyblue;border-radius: 3px;height:20px">
-          <mat-panel-title style="border-radius: 8px;height:40px;padding-top:8px;padding-left:20px;">
+        <mat-expansion-panel-header style="background-color:rgb(216, 76, 76);border-radius: 3px;height:20px">
+          <mat-panel-title style="border-radius: 8px;height:40px;padding-top:8px;padding-left:20px;color:white">
             Add new address
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -52,9 +54,10 @@
       <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
       </mat-expansion-panel>
     </mat-accordion>
+    </mat-card>
   </div>
   <div class="col-sm-6">
-    <mat-card class="billing-card">
+    <mat-card class="billing-card;" style="background-color:lightcyan">
       <mat-card-title>
         <b>Order Details</b>
       </mat-card-title>
@@ -62,7 +65,7 @@
         <div class="table-responsive">
           <thead>
             <tr>
-              <td style="width: 400px">
+              <td style="width: 450px">
                 <h5>Total Items</h5>
               </td>
               <td>
@@ -70,11 +73,11 @@
               </td>
             </tr>
             <tr>
-              <td style="width: 400px">
+              <td style="width: 450px">
                 <h5>Amount Payable</h5>
               </td>
               <td>
-                <h5>{{getSum()}}</h5>
+                <h5>₹ {{getSum()}}</h5>
               </td>
             </tr>
             <hr>
