--- a/GoDeliverFrontEnd/src/app/payment/payment.component.html
+++ b/GoDeliverFrontEnd/src/app/payment/payment.component.html
@@ -32,7 +32,7 @@
           <p class="slash" style="margin-top:20px; margin-left:10px">/</p>
           <mat-form-field style="margin-left:10px">
             <input matInput [(ngModel)]="expiryYear" name="expiry-year" type="text" placeholder="YY" size="2"
-              data-stripe="exp_year">
+              data-stripe="exp_year" required>
           </mat-form-field>
         </div>
         <div class="form-row">
