Changes to payment and billing designs

--- a/GoDeliverFrontEnd/src/app/billing/billing.component.html
+++ b/GoDeliverFrontEnd/src/app/billing/billing.component.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-sm-6">
     <mat-card style="margin-bottom: 10px;">
-    <mat-card-title class="title" style="padding-left: 15px; background-color:rgb(216, 76, 76); ">Delivery Address</mat-card-title>
+    <mat-card-title class="title" style="padding-left: 15px; background-color:rgb(216, 76, 76); font-size=15px">Delivery Address</mat-card-title>
     <div *ngIf="addressList">
       <div style="margin-left:20px;margin-right:10px" *ngFor="let address of addressList">
         <app-delivery-card [address]="address"></app-delivery-card>
@@ -57,7 +57,7 @@
     </mat-card>
   </div>
   <div class="col-sm-6">
-    <mat-card class="billing-card;" style="background-color:lightcyan">
+    <mat-card class="billing-card;" style="background-color:#E0E0E0">
       <mat-card-title>
         <b>Order Details</b>
       </mat-card-title>
