--- a/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.css
+++ b/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.css
@@ -2,22 +2,17 @@
     background-color:orange;
 }
 .order{
-    margin-top:10px;
-    margin-bottom: 20px;
+    margin-bottom: 4px;
     height:250px;
     margin-left:20px;
-    background-color: lightcyan;
-    border-radius:6px
+    background-color: E0E0E0;
 }
 .component-body{
     height: 100%;
+    margin-top: 2%;
 }
 .protect{
     height:auto;
     margin-left:20px;
-    background-color: lightcyan;
-    border-radius:6px
+    background-color: E0E0E0;
 }
-h2{
-    font-family: 'Metamorphous', cursive;
-  }
