--- a/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
+++ b/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
@@ -1,10 +1,10 @@
 <div class="component-body">
-    <h2 class="text-center m-4">Time slot</h2>
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
                 <mat-card style="border-radius: 8px;margin-top:10px">
                     <div class="row">
+                        <h2 class="text-center m-4">Select your time slot for delivery!</h2>
                         <div *ngFor="let slots of slotsFinal;let i=index" style="padding-left:60px;">
                             <mat-card style="border-radius:8px; width:150px;">
                                 <input type="radio" class="radio-button" name="timeslots" [disabled]="!slots.slotAvailability"
@@ -34,7 +34,7 @@
 
                     </div>
                     <div class="text-center">
-                        <button class=" mt-5 p-2 btn-danger" style="border-radius:10px" routerLink="/billing">
+                        <button class=" mt-5 p-2 btn btn-danger" routerLink="/billing">
                             Change Date?
                         </button>
                     </div>
@@ -85,9 +85,6 @@
                         </div>
                     </mat-card-content>
                 </mat-card>
-            </div>
-            <div class="col-sm-8"></div>
-            <div class=" col-sm-4">
                 <mat-card class="protect">
                     <mat-card-content>
                         <div class="table-responsive">
@@ -104,6 +101,10 @@
                         </div>
                     </mat-card-content>
                 </mat-card>
+            </div>
+            <div class="col-sm-8"></div>
+            <div class=" col-sm-4">
+
             </div>
 
         </div>
