--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -1,7 +1,7 @@
 .component-body{
   height:100%;
-  /* background: url(../../assets/wallp.jpg); */
-  background-size: contain;
+  background: url(https://media.giphy.com/media/4N93QVoz2gPkHshQ1D/giphy.gif);
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -11,6 +11,7 @@
   width: 100%;
   background-size: contain;
   background-repeat: no-repeat;
+  margin-bottom: 2%
 }
 
 
