--- a/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
+++ b/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
@@ -1,3 +1,5 @@
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="default" color="#fff" type="ball-circus"> <p style="font-size: 20px; color: white">Loading...</p></ngx-spinner>
+
 <div class="component-body">
     <div class="container">
         <div class="row">
