--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
 <div class="component-body">
-  <div *ngIf="carts.length!=0;else test">
+  <div *ngIf="carts.length!=0;else empty">
     <div class=" container">
       <div class="table-responsive">
         <table class="table table-striped table-hover ">
@@ -51,9 +51,9 @@
       </div>
     </div>
   </div>
-  <ng-template #test>
+  <ng-template #empty>
     <div class="text-center">
-      <h1 class="italics">Your cart is empty</h1>
+      <h1 class="italics mt-5">Your cart is empty</h1>
     </div>
     <img src="assets/cartempty.svg" class="img-responsive" />
   </ng-template>
