--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -51,8 +51,8 @@
         <form>
           <div class="container">
             <div class="input-group">
-              <input type="text" class="form-control" autocomplete="off" placeholder="Search your favourite books here" name="search"
-                [(ngModel)]="search">
+              <input type="text" class="form-control" autocomplete="off" placeholder="Search your favourite books here"
+                name="search" [(ngModel)]="search">
               <span class="input-group-btn">
                 <button class="btn-block btn-danger rounded-0 form-control" (click)="searchBooks()"><i class="fa fa-search fa-fw"></i></button>
               </span>
@@ -62,9 +62,9 @@
       </div>
     </div>
   </div>
-<!--Div class to display the search result using bookservice-->
+  <!--Div class to display the search result using bookservice-->
   <div class="container">
-    <div *ngIf=books_result>
+    <div *ngIf="books_result.length!=0;else empty">
       <h2>Search Result</h2>
       <div class="row">
         <div class="col-sm-3" *ngFor="let book of books_result; let i = index">
@@ -75,9 +75,11 @@
         </div>
       </div>
     </div>
-    <div *ngIf=books_notAvailable>
-      <h2>Book not found</h2>
-    </div>
+    <ng-template #empty>
+      <div class="text-center">
+        <h1 class="italics mt-5">No books found</h1>
+      </div>
+    </ng-template>
   </div>
   <!-- routing to recommendations-->
   <div class="container">
