--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -64,12 +64,14 @@
   </div>
   <!--Div class to display the search result using bookservice-->
   <div class="container">
-    <h2>Search Result</h2>
-    <div class="row">
-      <div class="col-sm-3" *ngFor="let book of books_result; let i = index">
-        <br>
-        <div *ngIf='i < 4'>
-          <app-cards [book]=book></app-cards>
+    <div *ngIf=books_result>
+      <h2>Search Result</h2>
+      <div class="row">
+        <div class="col-sm-3" *ngFor="let book of books_result; let i = index">
+          <br>
+          <div *ngIf='i < 4'>
+            <app-cards [book]=book></app-cards>
+          </div>
         </div>
       </div>
     </div>
