--- a/GoDeliverFrontEnd/src/app/book/book.component.html
+++ b/GoDeliverFrontEnd/src/app/book/book.component.html
@@ -27,7 +27,7 @@
 
           <div class="container">
             <!-- Nav tabs -->
-            <ul class="nav nav-tabs" role="tablist">
+            <ul class="nav nav-tabs nav-justified" role="tablist">
               <li role="presentation" class="desc active">
                 <a href="#description" aria-controls="description" role="tab" data-toggle="tab">Description</a>
               </li>
@@ -61,9 +61,6 @@
           </div>
         </div>
       </div>
-
-
-
 
       <!-- end row -->
 
