--- a/GoDeliverFrontEnd/src/app/payment/payment.component.css
+++ b/GoDeliverFrontEnd/src/app/payment/payment.component.css
@@ -6,3 +6,7 @@
 mat-card{
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
 }
+
+.btn-danger{
+  background: rgb(196,17,17);
+}
