--- a/GoDeliverFrontEnd/src/app/book/book.component.css
+++ b/GoDeliverFrontEnd/src/app/book/book.component.css
@@ -24,26 +24,22 @@
     color:#fff;
 }
 
-li{
-  margin: 5px;
-}
-a{
-  color: white;
-  font-weight: 500;
-  text-decoration: none;
-}
-li:hover{
-  color: rgb(196,17,17,0.5);
+.desc{
+  margin: 0% 9% 0% 9%;
 }
 
-ul.nav{
-  background-color: blue;
-  border-radius: 2px;
+.desc a{
+  color: white;
+  text-decoration: none;
+}
+
+ul.nav.nav-tabs{
+  background-color: rgb(196,17,17);
 }
 
 .book-title{
   font-size: 5vh;
 }
 .product-price{
-  font-size: 3vh; 
+  font-size: 3vh;
 }
