--- a/GoDeliverFrontEnd/src/app/book/book.component.html
+++ b/GoDeliverFrontEnd/src/app/book/book.component.html
@@ -14,7 +14,7 @@
           </div>
           <div class="container">
             <div class="row m-3">
-              <button class="btn btn-lg btn-brand btn-block btn-warning">
+              <button class="btn btn-lg btn-brand btn-block btn-warning" (click)="addToCart(book)">
                 <i class="fa fa-shopping-cart"></i> Add to Cart
               </button>
             </div>
