--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-md bg-light m-0" id="nav">
-    <a class="navbar-brand" routerLink="">
+    <a class="navbar-brand" href="">
       <img src="assets/books.ico" alt="logo" style="width:35px; display: inline-block;">
       BooK<span class="logo-style">ShoP</span>
     </a>
