removed autocomplete functions from input fields

--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -9,7 +9,7 @@
 
         <!--form class for username and password  using Material-->
         <mat-card>
-          <form class="example-form container-fluid justify-content-center" [formGroup]="userForm" (ngSubmit)="loginSubmit()">
+          <form class="example-form container-fluid justify-content-center" autocomplete="off" [formGroup]="userForm" (ngSubmit)="loginSubmit()">
             <mat-form-field>
               <input matInput placeholder="Enter your email" [formControl]="userEmail" name="userEmail" required>
               <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
