--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -18,7 +18,7 @@
                 </mat-form-field>
                 <br>
                 <mat-form-field class="password" class="example-full-width">
-                  <input matInput placeholder="Password, enter atleast 8 characters" type="password" formControlName="userPassword" name="userPassword" required minlength="8" />
+                  <input matInput placeholder="Password (Enter atleast 8 characters)" type="password" formControlName="userPassword" name="userPassword" required minlength="8" />
                   <mat-error *ngIf="email.invalid">{{getErrorMessage2()}}</mat-error>
                 </mat-form-field>
                 <br>
